# AIOps-Research

./: .env.example  .gitignore  .pylintrc  pyproject.toml
grey_literature/: extract_links_grey_literature.py
kappa/: calculate_fleiss_kappa_weighted.py  extract_agreements_subset.py  extract_disagreements_subset.py
selection_p1/: extract_result_selection_p1.py
